# ruby

./: .gitignore  Gemfile  README.md  array.c  ast.c  bignum.c  class.c  common.mk  compile.c  configure.ac  darray.h  debug.c  debug_counter.h  dln.c  encoding.c  gc.c  gc.h  gc.rb  hash.c  id_table.c  inits.c  insns.def  io.c  iseq.c  iseq.h  lex.c.blt  load.c  logging_readme.md  main.c  node.c  node.h  object.c  object_data.r  object_log_parse.rb  parse.y  probes.d  proc.c  ractor.c  ractor_core.h  range.c  (+34 more)
.github/workflows/: compilers.yml  yjit-ubuntu.yml
bootstraptest/: test_ractor.rb  test_yjit.rb
defs/: gmake.mk  id.def  keywords  lex.c.src
doc/: ujit.md
ext/-test-/abi/: abi.c
ext/-test-/gvl/call_without_gvl/: call_without_gvl.c
ext/-test-/string/: capacity.c  cstr.c  fstring.c
ext/etc/: extconf.rb
ext/objspace/: objspace.c  objspace_dump.c
ext/ripper/: eventids2.c
ext/socket/: raddrinfo.c  rubysocket.h  socket.c
ext/zlib/: zlib.c
include/: ruby.h
include/ruby/: ruby.h  thread.h  thread_native.h
include/ruby/internal/: config.h  event.h  fl_type.h  globals.h
internal/: array.h  class.h  gc.h  inits.h  senum.h  string.h  symbol.h  variable.h  vm.h
lib/rdoc/parser/: ripper_state_lex.rb
misc/: lldb_cruby.py  test_lldb_cruby.rb
template/: GNUmakefile.in  Makefile.in  prelude.c.tmpl
test/-ext-/: test_abi.rb
test/-ext-/gvl/: test_instrumentation_api.rb  test_last_thread.rb
test/-ext-/string/: test_capacity.rb  test_fstring.rb  test_rb_str_dup.rb
test/objspace/: test_objspace.rb
test/open-uri/: test_open-uri.rb
test/racc/: test_chk_y.rb
test/ruby/: test_constant_access.rb  test_gc_compact.rb  test_iseq.rb  test_range.rb  test_refinement.rb  test_rubyvm.rb
test/rubygems/: test_gem_commands_environment_command.rb
tool/: abi.rb  mkconfig.rb
tool/ruby_vm/views/: vm.inc.erb
win32/: Makefile.sub  resource.rb
yjit/: .gitignore  Cargo.toml  README.md  cruby_bindings.rs  test-gen.rb  test.c
yjit/bindgen/src/: main.rs
yjit/src/: codegen.rs  core.rs  cruby.rs  cruby_bindings.inc.rs  invariants.rs  lib.rs  options.rs  stats.rs  utils.rs  yjit.rs
yjit/src/asm/: libc.rs  memreg.rs  mod.rs
yjit/src/asm/x64/: mod.rs
yjit/src/asm/x86_64/: mod.rs  tests.rs
(+8 files in other folders)
