[package]
name = "yjit"
version = "0.1.0"
edition = "2021"
rust-version = "1.57.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
# No required dependencies to simplify build process. TODO: Link to yet to be
# written rationale. Optional For development and testing purposes
capstone = { version = "0.10.0", optional = true }

[features]
# NOTE: By having the Capstone dependency behind a feature, we allow
# building without needing to install it, but then I have to run
# `cargo test --features disassembly` for tests...
disassembly = ["capstone"]
