[package]
name = "yjit"
version = "0.1.0"       # YJIT version
edition = "2021"        # Rust 2021 edition to compile with
rust-version = "1.57.0" # Minimally supported rust version
publish = false         # Don't publish to crates.io

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
# No required dependencies to simplify build process. TODO: Link to yet to be
# written rationale. Optional For development and testing purposes
# FIXME: `capstone-sys` takes 23s to build in dev mode and 50s in release mode.
# It might be better to dynamically link against system capstone instead of
# depending on this crate.
capstone = { version = "0.10.0", optional = true }
memmap = { version = "0.7.0" }

[features]
# NOTE: By having the Capstone dependency behind a feature, we allow
# building without needing to install it, but then I have to run
# `cargo test --features disassembly` for tests...
disassembly = ["capstone"]
stats = []
asm_comments = []

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
# The extra robustness that comes from checking for arithmetic overflow is
# worth the performance cost for the compiler.
overflow-checks = true

[profile.release.package.capstone]
# Don't need the disassembler to run fast since it's for development uses.
# Optimize for build time.
opt-level = 0
